--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,25 @@
 /*  your css code here. If applicable */
+.hero{
+	display: flex;
+	justify-content: space-between;
+	text-align: center;
+}
+
+img{
+	width: 400px;
+	height: 200px;
+	object-fit: cover;
+}
+
+button{
+	padding: 5px;
+	background-color: red;
+	color: white;
+	border-radius: 5px;
+	border: 1px solid red;
+}
+
+.content{
+	padding: 5px;
+}
+
